--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <button>my sql</button>
             </div>
             <p>
-              Kita Bersuara is a website for Complaint media for students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, uang gedung (aku gtw), this is the second project after Kita Bersuara which will continue to be developed to be better and appropriate.
+              Kita Bersuara is a website for Complaint media for students at Boyolangu 1 State Vocational High School, this website is the first web project carried out by 1 team consisting of 4 people, with the website students can submit their complaints related to facilities and infrastructure, curriculum, public relations, and student affairs.
             </p>
           </div>
 
@@ -126,7 +126,7 @@
               <button>my sql</button>
             </div>
             <p>
-              SPP Kita is a website that used to calculate annual expenditure from students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, uang gedung (aku gtw), this is the second project after Kita Bersuara which will continue to be developed to be better and appropriate.
+              SPP Kita is a website that used to calculate annual expenditure from students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, school contribution, this is the second project after Kita Bersuara which will continue to be developed to be better and appropriate
             </p>
           </div>
         </div>
