menambahkan card skills - php

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <div class="thirdLine"></div>
         </ul>
         <!-- End of Burger -->
-
       </div>
     </header>
     <!-- End of navbar -->
@@ -79,6 +78,11 @@
             <h1>JAVA SCRIPT</h1>
             <p>javascript used for make website page more interactive with user, enabling websites more interactive.</p>
           </div>
+          <div class="php">
+            <img src="./img/php.png" alt="" />
+            <h1>PHP</h1>
+            <p>php (hypertext preprocessor) is a programming language commonly used to build dynamic and interactive web applications.</p>
+          </div>
         </div>
       </section>
       <!-- End of skills konten -->
@@ -104,7 +108,8 @@
               <button>my sql</button>
             </div>
             <p>
-              Kita Bersuara is a website for Complaint media for students at Boyolangu 1 State Vocational High School, this website is the first web project carried out by 1 team consisting of 4 people, with the website students can submit their complaints related to facilities and infrastructure, curriculum, public relations, and student affairs.
+              Kita Bersuara is a website for Complaint media for students at Boyolangu 1 State Vocational High School, this website is the first web project carried out by 1 team consisting of 4 people, with the website students can submit
+              their complaints related to facilities and infrastructure, curriculum, public relations, and student affairs.
             </p>
           </div>
 
@@ -126,7 +131,8 @@
               <button>my sql</button>
             </div>
             <p>
-              SPP Kita is a website that used to calculate annual expenditure from students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, school contribution, this is the second project after Kita Bersuara which will continue to be developed to be better and appropriate
+              SPP Kita is a website that used to calculate annual expenditure from students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, school contribution, this
+              is the second project after Kita Bersuara which will continue to be developed to be better and appropriate
             </p>
           </div>
         </div>
