merubah ukuran icon php pada 'skills'

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>javascript used for make website page more interactive with user, enabling websites more interactive.</p>
           </div>
           <div class="php">
-            <img src="./img/php.png" alt="" />
+            <img src="./img/php.png" alt="" class="php-icon"/>
             <h1>PHP</h1>
             <p>php (hypertext preprocessor) is a programming language commonly used to build dynamic and interactive web applications.</p>
           </div>
