merubah capslock items laravel

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="laravel">
             <img src="./img/laravel.png" alt="" class="php-icon" />
-            <h1>Laravel</h1>
+            <h1>LARAVEL</h1>
             <p>Laravel is a web application framework with expressive, elegant syntax.</p>
           </div>
         </div>
