--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1 class="skills-title">-Skills</h1>
         <h2 class="after-skills-title">on the way of learning</h2>
         <div class="grid-skills">
-          <div class="html">
+          <!-- <div class="html">
             <img src="./img/html.png" alt="" />
             <h1>HTML</h1>
             <p>The most basic building block of the Web. It defines the meaning and structure of web content.</p>
@@ -89,6 +89,27 @@
             <img src="./img/laravel.png" alt="" class="php-icon" />
             <h1>LARAVEL</h1>
             <p>Laravel is a web application framework with expressive, elegant syntax.</p>
+          </div> -->
+          <div class="html">
+            <img src="./img/html.png" alt="" class="html-image"/>
+          </div>
+          <div class="css">
+            <img src="./img/css.png" alt="" class="css-image"/>
+          </div>
+          <div class="javascript">
+            <img src="./img/js.png" alt="" class="js-image"/>
+          </div>
+          <div class="php">
+            <img src="./img/php.png" alt="" class="php-image"/>
+          </div>
+          <div class="mysql">
+            <img src="./img/mysql.png" alt="" class="mysql-image"/>
+          </div>
+          <div class="laravel">
+            <img src="./img/laravel.png" alt="" class="laravel-image"/>
+          </div>
+          <div class="react">
+            <img src="./img/react.png" alt="" class="react-image"/>
           </div>
         </div>
       </section>
