menambahkan bootstrap dan tailwind di skills

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Menu on navbar -->
         <nav>
           <ul class="menu">
-            <li class="menuSatu"><a href="#home">Home</a></li>
+            <li class="menuSatu"><a href="">Home</a></li>
             <li class="menuDua"><a href="https://instagram.com/yumaaji12" target="_blank">Instagram</a></li>
             <li class="menuTiga"><a href="https://github.com/yumaaji" target="_blank">Github</a></li>
             <li class="menuEmpat"><a href="#skills">Skills</a></li>
@@ -91,25 +91,31 @@
             <p>Laravel is a web application framework with expressive, elegant syntax.</p>
           </div> -->
           <div class="html">
-            <img src="./img/html.png" alt="" class="html-image"/>
+            <img src="./img/html.png" alt="" class="html-image" />
           </div>
           <div class="css">
-            <img src="./img/css.png" alt="" class="css-image"/>
+            <img src="./img/css.png" alt="" class="css-image" />
           </div>
           <div class="javascript">
-            <img src="./img/js.png" alt="" class="js-image"/>
+            <img src="./img/js.png" alt="" class="js-image" />
           </div>
           <div class="php">
-            <img src="./img/php.png" alt="" class="php-image"/>
+            <img src="./img/php.png" alt="" class="php-image" />
           </div>
           <div class="mysql">
-            <img src="./img/mysql.png" alt="" class="mysql-image"/>
+            <img src="./img/mysql.png" alt="" class="mysql-image" />
           </div>
           <div class="laravel">
-            <img src="./img/laravel.png" alt="" class="laravel-image"/>
+            <img src="./img/laravel.png" alt="" class="laravel-image" />
           </div>
           <div class="react">
-            <img src="./img/react.png" alt="" class="react-image"/>
+            <img src="./img/react.png" alt="" class="react-image" />
+          </div>
+          <div class="tailwind">
+            <img src="./img/tailwind.png" alt="" class="tailwind-image" />
+          </div>
+          <div class="bootstrap">
+            <img src="./img/bootstrap.png" alt="" class="bootstrap-image" />
           </div>
         </div>
       </section>
