--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="menu">
             <li class="menuSatu"><a href="">Home</a></li>
             <li class="menuDua"><a href="https://instagram.com/yumaaji12" target="_blank">Instagram</a></li>
-            <li class="menuTiga"><a href="https://github.com/yumaaji" target="_blank">Github</a></li>
+            <li class="menuTiga"><a href="https://github.com/dazai-ops" target="_blank">Github</a></li>
             <li class="menuEmpat"><a href="#skills">Skills</a></li>
             <li class="menuLima"><a href="#project">Project</a></li>
           </ul>
