--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             <div class="button-card">
               <h6>Kita Bersuara</h6>
               <div class="status">
-                <button>#Finished |</button>
-                <a href="https://github.com/yumaaji/kita-bersuara" target="_blank">Visited</a>
+                <button>#Finished</button>
               </div>
             </div>
             <div class="teknologi">
@@ -152,8 +151,7 @@
             <div class="button-card">
               <h6>SPP Kita</h6>
               <div class="status">
-                <button>#Development |</button>
-                <a href="https://github.com/yumaaji/spp-app" target="_blank">Visited</a>
+                <button>#Development</button>
               </div>
             </div>
             <div class="teknologi">
@@ -176,8 +174,7 @@
             <div class="button-card">
               <h6>Personal Portfolio Website</h6>
               <div class="status">
-                <button>#Finished |</button>
-                <a href="https://github.com/yumaaji/portfolio" target="_blank">Visited</a>
+                <button>#Finished</button>
               </div>
             </div>
             <div class="teknologi">
