--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Menu on navbar -->
         <nav>
           <ul class="menu">
-            <li class="menuSatu"><a href="">Home</a></li>
+            <li class="menuSatu"><a href="https://www.linkedin.com/in/yuma-aji-pengestu-a2aa702b5/" target="_blank">LinkedIn</a></li>
             <li class="menuDua"><a href="https://instagram.com/yumaaji12" target="_blank">Instagram</a></li>
             <li class="menuTiga"><a href="https://github.com/dazai-ops" target="_blank">Github</a></li>
             <li class="menuEmpat"><a href="#skills">Skills</a></li>
