--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <nav>
           <ul class="menu">
             <li class="menuSatu"><a href="https://www.linkedin.com/in/yuma-aji-pengestu-a2aa702b5/" target="_blank">LinkedIn</a></li>
-            <li class="menuDua"><a href="https://instagram.com/yumaaji12" target="_blank">Instagram</a></li>
             <li class="menuTiga"><a href="https://github.com/dazai-ops" target="_blank">Github</a></li>
             <li class="menuEmpat"><a href="#skills">Skills</a></li>
             <li class="menuLima"><a href="#project">Project</a></li>
@@ -51,7 +50,9 @@
               <span>Yuma</span> <br />
               Aji Pangestu
             </h1>
-            <p class="self-information">A vocational high school student on the way to learn software development especially websites with modern technology, find out more with the github address above.</p>
+            <p class="self-information">
+              I am a web developer, I am passionate about learning and creating new things, I am a person who is always interested in learning new things and learning new things.
+            </p>
           </div>
           <div class="right">
             <img src="./img/hero-walk-left.png" alt="" />
@@ -65,54 +66,29 @@
         <h1 class="skills-title">-Skills</h1>
         <h2 class="after-skills-title">on the way of learning</h2>
         <div class="grid-skills">
-          <!-- <div class="html">
-            <img src="./img/html.png" alt="" />
-            <h1>HTML</h1>
-            <p>The most basic building block of the Web. It defines the meaning and structure of web content.</p>
-          </div>
-          <div class="css">
-            <img src="./img/css.png" alt="" />
-            <h1>CSS</h1>
-            <p>Stylesheet language used to describe the presentation of a document written in HTML or XML</p>
-          </div>
-          <div class="javascript">
-            <img src="./img/js.png" alt="" />
-            <h1>JAVA SCRIPT</h1>
-            <p>JavaScript.com is a resource built by the Pluralsight team for the JavaScript community.</p>
-          </div>
-          <div class="php">
-            <img src="./img/php.png" alt="" class="php-icon" />
-            <h1>PHP</h1>
-            <p>A popular general-purpose scripting language that is especially suited to web development.</p>
-          </div>
-          <div class="laravel">
-            <img src="./img/laravel.png" alt="" class="php-icon" />
-            <h1>LARAVEL</h1>
-            <p>Laravel is a web application framework with expressive, elegant syntax.</p>
-          </div> -->
-          <div class="html">
-            <img src="./img/html.png" alt="" class="html-image" />
-          </div>
-          <div class="css">
-            <img src="./img/css.png" alt="" class="css-image" />
-          </div>
           <div class="javascript">
             <img src="./img/js.png" alt="" class="js-image" />
-          </div>
-          <div class="php">
-            <img src="./img/php.png" alt="" class="php-image" />
-          </div>
-          <div class="mysql">
-            <img src="./img/mysql.png" alt="" class="mysql-image" />
-          </div>
-          <div class="laravel">
-            <img src="./img/laravel.png" alt="" class="laravel-image" />
           </div>
           <div class="react">
             <img src="./img/react.png" alt="" class="react-image" />
           </div>
+          <div class="react">
+            <img src="./img/JQuery.png" alt="" class="react-image" />
+          </div>
           <div class="tailwind">
             <img src="./img/tailwind.png" alt="" class="tailwind-image" />
+          </div>
+          <div class="php">
+            <img src="./img/php.png" alt="" class="php-image" />
+          </div>
+          <div class="laravel">
+            <img src="./img/laravel.png" alt="" class="laravel-image" />
+          </div>
+          <div class="laravel">
+            <img src="./img/codeigniter.png" alt="" class="laravel-image" />
+          </div>
+          <div class="mysql">
+            <img src="./img/mysql.png" alt="" class="mysql-image" />
           </div>
           <div class="bootstrap">
             <img src="./img/bootstrap.png" alt="" class="bootstrap-image" />
@@ -140,33 +116,6 @@
               <button>php</button>
               <button>my sql</button>
             </div>
-            <p>
-              Kita Bersuara is a website for Complaint media for students at Boyolangu 1 State Vocational High School, this website is the first web project carried out by 1 team consisting of 4 people, with the website students can submit
-              their complaints related to facilities and infrastructure, curriculum, public relations, and student affairs.
-            </p>
-          </div>
-
-          <div class="card-project">
-            <img src="./img/project-spp.png" alt="" />
-            <div class="button-card">
-              <h6>SPP Kita</h6>
-              <div class="status">
-                <button>#Development</button>
-              </div>
-            </div>
-            <div class="teknologi">
-              <button>html</button>
-              <button>scss</button>
-              <button>bootstrap</button>
-              <button>javascript</button>
-              <button>php</button>
-              <button>codeigniter</button>
-              <button>my sql</button>
-            </div>
-            <p>
-              SPP Kita is a website that used to calculate annual expenditure from students at Boyolangu 1 State Vocational High School, for now includes recording training activities, industrial work visit plans, school contribution, this
-              is the second project after Kita Bersuara which will continue to be developed to be better and appropriate
-            </p>
           </div>
 
           <div class="card-project">
@@ -182,10 +131,21 @@
               <button>scss</button>
               <button>javascript</button>
             </div>
-            <p>
-              A personal website to tell the website project that we have and are working on, besides that it can also be used to display the skills we have. With a minimalist and clean concept with a black and white color theme. You can
-              get the source code to display this website by pressing 'Visited' above
-            </p>
+          </div>
+
+          <div class="card-project">
+            <img src="./img/movielist.png" alt="" />
+            <div class="button-card">
+              <h6>Movie List - TMBD API</h6>
+              <div class="status">
+                <button>#Finished</button>
+              </div>
+            </div>
+            <div class="teknologi">
+              <button>React Js</button>
+              <button>Appwrite (Trending Topic)</button>
+              <button>Tailwind</button>
+            </div>
           </div>
         </div>
       </section>
